# fpgapu

./: CMakeLists.txt  LICENSE  README.md
common/: test-common.hpp  test-fixture.hpp
docs/: design.md  header_entry.json  instrument_length.json  order_entry.json  pattern_entry.json
rtl/: CMakeLists.txt  audio_processing_unit.v  channel_1_note_sequencer.v  channel_1_pulse.v  channel_2_note_sequencer.v  channel_2_pulse.v  channel_3_note_sequencer.v  channel_3_triangle.v  channel_4_noise.v  channel_4_note_sequencer.v  channel_controller.v  channel_controller_test.cpp  channel_test.v  channel_test_sdl_main.cpp  channel_test_sdl_top.v  duration_counter.v  duration_counter_test.cpp  envelope_generator.v  envelope_generator_tb.v  envelope_generator_test.cpp  fpgapu_sdl_main.cpp  fpgapu_sdl_top.v  go_board_switches.v  note_player.v  note_player_tb.v  note_player_test.cpp  note_sequencer.v  note_sequencer_tb.v  note_sequencer_test.cpp  note_table.rb  note_table.v  pattern_sequencer.v  pattern_sequencer_tb.v  pattern_sequencer_test.cpp  phase_generator.v  pitch_lookup.v  pitch_lookup_tb.v  pitch_lookup_test.cpp  pwm_test.cpp  pwm_top.v  (+10 more)
rtl/lattice/: .gitignore  pwm_sbt.project  pwm_syn.prj
rtl/resources/: channel_1.txt  noise_table_1MHz.txt  noise_table_25MHz.txt  note_table_1MHz.txt  note_table_1MHz_full.txt  note_table_48kHz.txt  song.json  song_scale.json  song_scale_rom.txt  vibrato_table_1MHz.txt  vibrato_table_25MHz.txt  vibrato_table_48kHz.txt
